# Brazo-Robotico

./: .gitignore  README.md  requirements.txt
app/: main.py  ros_bridge_sim.py  simulated_camera.py
app/static/: style.css
app/templates/: index.html
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/robot_interfaces/include/robot_interfaces/robot_interfaces/msg/: detected_object.hpp
install/robot_interfaces/include/robot_interfaces/robot_interfaces/msg/detail/: detected_object__functions.h  detected_object__rosidl_typesupport_fastrtps_c.h  detected_object__rosidl_typesupport_introspection_c.h  detected_object__traits.hpp  detected_object_array__rosidl_typesupport_introspection_cpp.hpp  detected_object_array__struct.h  detected_object_array__type_support.h  detected_object_array__type_support.hpp
install/robot_interfaces/share/ament_index/resource_index/rosidl_interfaces/: robot_interfaces
install/robot_interfaces/share/robot_interfaces/: package.ps1  package.sh  package.xml
install/robot_interfaces/share/robot_interfaces/cmake/: export_robot_interfaces__rosidl_generator_cppExport.cmake  export_robot_interfaces__rosidl_generator_pyExport-noconfig.cmake  export_robot_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  robot_interfacesConfig.cmake  robot_interfaces__rosidl_typesupport_introspection_cExport.cmake
install/robot_interfaces/share/robot_interfaces/msg/: DetectedObject.idl  DetectedObject.msg  DetectedObjectArray.idl
install/robot_perception/lib/robot_perception/: camera_node  depth_node  yolo_node
install/robot_perception/share/robot_perception/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robot_speech/share/robot_speech/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robot_task_manager/share/robot_task_manager/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
irb14050_ws/: .gitignore
irb14050_ws/src/abb_irb14050_description/: CMakeLists.txt  README.md  package.xml
irb14050_ws/src/abb_irb14050_description/launch/: display.launch.py
irb14050_ws/src/abb_irb14050_description/rviz/: display.rviz
irb14050_ws/src/abb_irb14050_description/urdf/: abb_irb14050.urdf
irb14050_ws/src/abb_irb14050_egm/: README.md  package.xml  setup.cfg  setup.py
irb14050_ws/src/abb_irb14050_egm/abb_irb14050_egm/: egm_bridge_node.py  egm_moveit_executor.py  egm_pb2.py  joint_commander_node.py  joint_state_listener_node.py  teach_node.py  waypoint_player_node.py
irb14050_ws/src/abb_irb14050_egm/launch/: egm_bridge.launch.py
irb14050_ws/src/abb_irb14050_gazebo/: CMakeLists.txt  README.md  package.xml
irb14050_ws/src/abb_irb14050_gazebo/config/: controllers_gazebo.yaml
irb14050_ws/src/abb_irb14050_gazebo/launch/: gazebo_moveit.launch.py  spawn_robot.launch.py
irb14050_ws/src/abb_irb14050_gazebo/worlds/: empty.world
irb14050_ws/src/abb_irb14050_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
irb14050_ws/src/abb_irb14050_moveit_config/config/: abb_irb14050.ros2_control.xacro  abb_irb14050.srdf  abb_irb14050.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
irb14050_ws/src/abb_irb14050_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_real.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
irb14050_ws/src/realsense_d415_bringup/: package.xml  setup.cfg  setup.py
irb14050_ws/src/realsense_d415_bringup/config/: d415_params.yaml
irb14050_ws/src/realsense_d415_bringup/launch/: d415_rgbd_pointcloud.launch.py
irb14050_ws/src/robot_interfaces/: CMakeLists.txt  package.xml
irb14050_ws/src/robot_interfaces/msg/: DetectedObject.msg  DetectedObjectArray.msg  DetectedObjectCloud.msg  DetectedObjectCloudArray.msg
irb14050_ws/src/robot_perception/: package.xml  setup.py
irb14050_ws/src/robot_perception/config/: yolo_params.yaml
irb14050_ws/src/robot_perception/launch/: perception.launch.py
irb14050_ws/src/robot_perception/robot_perception/: camera_node.py  depth_estimator.py  pointcloud.py  yolo_node.py
irb14050_ws/src/robot_speech/: package.xml  setup.cfg  setup.py
irb14050_ws/src/robot_task_manager/: package.xml  setup.cfg  setup.py
log/: latest_build
realsense_d415_ws/: .gitignore  README.md
realsense_d415_ws/scripts/: check_d415_topics.sh  start_d415.sh  view_d415.sh
realsense_d415_ws/src/realsense_d415_bringup/: README.md  package.xml  setup.py
realsense_d415_ws/src/realsense_d415_bringup/config/: d415_params.yaml
realsense_d415_ws/src/realsense_d415_bringup/launch/: d415_rgbd_pointcloud.launch.py
robot_voice_commander/: README.md  benchmark.py  benchmark_resultados.json  main.py  pipeline.py  requirements.txt
robot_voice_commander/config/: settings.yaml
robot_voice_commander/modules/: __init__.py
robot_voice_commander/modules/audio/: __init__.py  capture.py  transcriber.py
robot_voice_commander/modules/context/: __init__.py  builder.py
robot_voice_commander/modules/llm/: __init__.py  client.py  prompts.py
robot_voice_commander/modules/parser/: __init__.py  action_parser.py  schema.py
robot_voice_commander/tests/: test_parser.py  test_pipeline_integration.py
