<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>abb_irb14050_description</name>
  <version>0.1.0</version>
  <description>
    URDF, meshes and display launch files for the ABB IRB 14050
    (single-arm derivative of the YuMi IRB 14000). Adapted from
    OrebroUniversity's yumi_description by trimming to the right arm.
  </description>
  <maintainer email="ives@example.com">Ives</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>urdf</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
