<?xml version="1.0"?>
<package format="3">
  <name>realsense_d415_bringup</name>
  <version>0.0.1</version>
  <description>Bringup package for Intel RealSense D415 on ROS 2 Jazzy.</description>

  <maintainer email="A01658305@tec.mx">daniel-avendano</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>realsense2_camera</depend>
  <depend>realsense2_camera_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
